# LOVEPower

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  cmakesetup.sh
data/: arg.lua  boot.lua  callbacks.lua  jitsetup.lua  nogame.lua
examples/Hello world/: main.lua
examples/Love Wii Specials/: main.lua
src/: love.cpp  main.cpp
src/common/: Data.cpp  Data.h  Matrix.h  Module.h  Reference.cpp  Stream.cpp  Stream.h  Variant.cpp  Variant.h  config.h  delay.cpp  deprecation.cpp  deprecation.h  lovemath.h  memory.cpp  runtime.cpp  runtime.h  version.h
src/lib/Box2D/Dynamics/Joints/: b2PrismaticJoint.cpp
src/lib/FreeTypeGX/: FreeTypeGX.cpp  FreeTypeGX.h
src/lib/audiogc/: audiogc.LICENSE  audiogc.cpp  audiogc.hpp  dr_flac.h
src/lib/box2d/Collision/: b2DynamicTree.cpp
src/lib/box2d/Common/: b2Math.h  b2Settings.cpp
src/lib/sol/: forward.hpp  sol.hpp
src/libraries/glad/: gladfuncs.hpp
src/libraries/modplug/: fastmix.cpp  load_669.cpp  load_abc.cpp  load_amf.cpp  load_ams.cpp  load_dbm.cpp  load_dmf.cpp  load_dsm.cpp  load_far.cpp  load_it.cpp  load_j2b.cpp  load_mdl.cpp  load_med.cpp  load_mid.cpp  load_mod.cpp  load_mt2.cpp  load_mtm.cpp  load_okt.cpp  load_pat.cpp  load_psm.cpp  load_ptm.cpp  load_s3m.cpp  load_stm.cpp  load_ult.cpp  load_umx.cpp  load_wav.cpp  load_xm.cpp  mmcmp.cpp  modplug.cpp  snd_dsp.cpp  snd_flt.cpp  snd_fx.cpp  sndfile.cpp
src/libraries/stb/: stb_image.h
src/love/: love.cpp  love.hpp
src/love/common/: Exception.cpp  Exception.h  Module.h  Object.h  Reference.h  config.h  deprecation.cpp  runtime.cpp  runtime.h
src/love/modules/: audio.cpp  filesystem.cpp  filesystem.hpp  system.hpp  timer.cpp
src/love/modules/audio/: audio.cpp  audio.hpp
src/love/modules/audio/classes/: Source.cpp  Source.hpp
src/love/modules/data/: data.cpp  data.hpp
src/love/modules/event/: event.cpp  event.hpp
src/love/modules/filesystem/: filesystem.cpp  filesystem.hpp
src/love/modules/graphics/: graphics.cpp  graphics.hpp
src/love/modules/graphics/classes/: font.cpp  font.hpp  quad.cpp  quad.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp
src/love/modules/math/: math.cpp  math.hpp
src/love/modules/math/classes/: RandomGenerator.hpp  randomGenerator.cpp
src/love/modules/mii/: mii.cpp  mii.hpp  miimodule.cpp  miimodule.hpp
src/love/modules/mii/classes/: miisafe.hpp
src/love/modules/physics/: body.cpp  body.hpp  joint.cpp  joint.hpp  physics.cpp  physics.hpp  shape.cpp  shape.hpp
src/love/modules/physics/box2d/: Body_b2d.cpp  Body_b2d.h  ChainShape.cpp  ChainShape.h  CircleShape.cpp  CircleShape.h  Contact.h  DistanceJoint.cpp  DistanceJoint.h  EdgeShape.cpp  EdgeShape.h  Fixture.cpp  Fixture.h  FrictionJoint.cpp  FrictionJoint.h  GearJoint.cpp  GearJoint.h  Joint_b2d.cpp  Joint_b2d.h  MotorJoint.cpp  MotorJoint.h  MouseJoint.cpp  MouseJoint.h  Physics.cpp  Physics.h  PolygonShape.cpp  PolygonShape.h  PrismaticJoint.cpp  PrismaticJoint.h  PulleyJoint.cpp  PulleyJoint.h  RevoluteJoint.cpp  RevoluteJoint.h  RopeJoint.cpp  RopeJoint.h  Shape_b2d.cpp  Shape_b2d.h  WeldJoint.cpp  WeldJoint.h  WheelJoint.cpp  (+29 more)
src/love/modules/system/: system.cpp  system.hpp
src/love/modules/thread/: Thread.h  threads_love.cpp  threads_love.h
src/love/modules/thread/sdl/: threads_sdl.cpp  threads_sdl.h
src/love/modules/timer/: timer.cpp  timer.hpp
src/love/modules/wiimote/: wiimote.cpp  wiimote.hpp
src/love/modules/wiimote/classes/: balanceBoard.cpp  balanceBoard.hpp  wiimoteController.cpp  wiimoteController.hpp
src/love/modules/window/: window.cpp  window.hpp
src/modules/audio/: Audio.cpp  Audio.h  wrap_Audio.cpp  wrap_Audio.h  wrap_RecordingDevice.h  wrap_Source.h
src/modules/audio/null/: Audio.cpp
src/modules/data/: ByteData.cpp  ByteData.h  CompressedData.h  Compressor.h  DataModule.cpp  DataModule.h  HashFunction.cpp  HashFunction.h  wrap_Data.cpp  wrap_DataModule.cpp  wrap_DataModule.h
src/modules/event/: wrap_Event.cpp  wrap_Event.h
src/modules/event/sdl/: Event.cpp  Event.h
src/modules/filesystem/: Filesystem.cpp  Filesystem.h  NativeFile.cpp  NativeFile.h  wrap_Filesystem.cpp  wrap_Filesystem.h
src/modules/filesystem/physfs/: File.cpp  File.h  Filesystem.cpp  PhysfsIo.h
src/modules/font/: Font.cpp  Font.h  wrap_Font.h
src/modules/font/freetype/: Font.cpp  Font.h  TrueTypeRasterizer.cpp
src/modules/graphics/: Font.cpp  Graphics.cpp  Graphics.h  Image.h  Mesh.cpp  Mesh.h  ParticleSystem.cpp  ParticleSystem.h  Quad.h  SpriteBatch.cpp  SpriteBatch.h  Text.cpp  Texture.cpp  Texture.h  Video.cpp  Video.h  wrap_Graphics.cpp  wrap_Graphics.h
src/modules/graphics/opengl/: Graphics.cpp  Graphics.h  OpenGL.cpp  OpenGL.h
src/modules/image/: CompressedImageData.cpp  FormatHandler.h  Image.cpp  Image.h  wrap_Image.h  wrap_ImageData.lua
src/modules/image/magpie/: PNGHandler.cpp
src/modules/joystick/: JoystickModule.h  wrap_JoystickModule.h
src/modules/joystick/sdl/: Joystick.h  JoystickModule.cpp  JoystickModule.h
src/modules/keyboard/: Keyboard.cpp  Keyboard.h  wrap_Keyboard.h
src/modules/keyboard/sdl/: Keyboard.cpp
src/modules/love/: boot.lua  callbacks.lua  love.cpp
src/modules/math/: MathModule.cpp  MathModule.h  RandomGenerator.h  wrap_Math.h
src/modules/mouse/: Mouse.h  wrap_Mouse.h
src/modules/mouse/sdl/: Mouse.cpp  Mouse.h
src/modules/physics/box2d/: Body.cpp  Body.h  FrictionJoint.cpp  GearJoint.cpp  Physics.cpp  Physics.h  RevoluteJoint.cpp  WeldJoint.cpp  wrap_Physics.h
src/modules/sound/: Sound.h  wrap_Sound.h
src/modules/sound/lullaby/: FLACDecoder.h  ModPlugDecoder.h  Sound.cpp  VorbisDecoder.h
src/modules/thread/: Channel.h  wrap_ThreadModule.h
src/modules/timer/: Timer.cpp  Timer.h  wrap_Timer.h
src/modules/video/: wrap_Video.h  wrap_VideoStream.h
src/modules/video/theora/: TheoraVideoStream.h  Video.h
src/modules/window/: Window.cpp  Window.h  wrap_Window.h
src/modules/window/sdl/: Window.cpp  Window.h
src/scripts/: auto.lua  auto.py  nogame.lua  nogame.lua.h
